<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/primary_bg"
    android:id="@+id/loginConstraintID"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="220dp"
        android:fontFamily="@font/inconsolata"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="180dp"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="191dp"
        android:alpha="0.65"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_inputlayout_signin_id"
        android:layout_width="316dp"
        android:layout_height="67dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        app:boxBackgroundMode="outline"
        app:hintTextColor="@color/white"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        style="@style/TextInputLayoutStyle"
        app:layout_constraintBottom_toTopOf="@+id/pass_inputlayout_signin_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_editText_signin_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_id"
            android:textColor="@color/strokeColorUnfocused"
            android:textColorHint="#FFFFFF" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_inputlayout_signin_id"
        style="@style/TextInputLayoutStyle"
        android:layout_width="316dp"
        android:layout_height="67dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="95dp"
        app:boxBackgroundMode="outline"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/materialButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_inputlayout_signin_id"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_editText_signin_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:textColor="@color/strokeColorUnfocused"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginStart="121dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="167dp"
        android:backgroundTint="@color/white"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:iconSize="20sp"
        app:elevation="20sp"
        app:cornerRadius="5sp"
        app:icon="@drawable/vpn_key"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="34dp"
        android:alpha="0.7"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="114dp"
        android:text="@string/new_member"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView3_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton" />

    <TextView
        android:id="@+id/textView3_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="114dp"
        android:clickable="true"
        android:onClick="onClick"
        android:focusable="true"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/materialButton" />



</androidx.constraintlayout.widget.ConstraintLayout>


