<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/signup_constraint_id"
    android:layout_height="match_parent"
    android:background="@color/primary_bg"
    tools:context=".SignUpActivity">



    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="160dp"
        android:fontFamily="@font/inconsolata"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="121dp"
        android:alpha="0.65"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_textInputLayout_id"
        style="@style/TextInputLayoutStyle"
        android:layout_width="316dp"
        android:layout_height="67dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="13dp"
        app:boxBackgroundMode="outline"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/email_textInputLayout_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_editText_signup_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:textColor="@color/strokeColorUnfocused"
            android:textColorHint="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_textInputLayout_id"
        style="@style/TextInputLayoutStyle"
        android:layout_width="316dp"
        android:layout_height="67dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        app:boxBackgroundMode="outline"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/password_textInputLayout_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_textInputLayout_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_editText_signup_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_id"
            android:textColor="@color/strokeColorUnfocused"
            android:textColorHint="#FFFFFF" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_textInputLayout_id"
        style="@style/TextInputLayoutStyle"
        android:layout_width="316dp"
        android:layout_height="67dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="91dp"
        app:boxBackgroundMode="outline"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/materialButton_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_textInputLayout_id"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_editText_signup_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:textColor="@color/strokeColorUnfocused"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton_signup"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginStart="121dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:cornerRadius="5sp"
        app:elevation="20sp"
        app:icon="@drawable/vpn_key"
        app:iconGravity="textStart"
        app:iconSize="20sp"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>